--- a/reclaim/templates/accounts/base.html
+++ b/reclaim/templates/accounts/base.html
@@ -18,7 +18,7 @@
   <div class="container mx-auto text-center">
     {% block title %}
     {% endblock %}
-    {% block content %}
+    {% block body %}
     {% endblock %}
   </div>
 </body>
