--- a/reclaim/templates/accounts/profile.html
+++ b/reclaim/templates/accounts/profile.html
@@ -6,8 +6,8 @@
 
 {% block content %}
   <header>
-    {% if user.Last_name %}
-      <h1>{{ user.First_name }} {{ user.Last_name }}のプロフィール</h1>
+    {% if user.last_name %}
+      <h1>{{ user.last_name }} {{ user.first_name }}のプロフィール</h1>
     {% endif %}
   </header>
   <main>
@@ -18,7 +18,6 @@
           <strong>メールアドレス:</strong> {{ user.email }}
         </p>
       {% endif %}
-
     </section>
     <section>
       <h2>プロフィール詳細</h2>
@@ -28,9 +27,10 @@
         {% endfor %}
       {% endif %}
     </section>
-    {% if user.is_store == True %}
+    <a href="{% url 'accounts:edit_profile' %}" class="btn btn-primary">プロフィールを編集</a>
+    {% if user.is_store %}
       <a href="{% url 'storeview:index' %}" class="btn btn-primary">リストへ飛ぶ</a>
-    {% else %}
+    {% elif not user.is_store %}
       <a href="{% url 'userview:index' %}" class="btn btn-primary">リストへ飛ぶ</a>
     {% endif %}
     <a href="{% url 'accounts:index' %}" class="btn btn-secondary">トップへ戻る</a>
