--- a/reclaim/templates/userview/base.html
+++ b/reclaim/templates/userview/base.html
@@ -19,6 +19,7 @@
 
   <body>
     <nav class="navbar navbar-dark sticky-top bg-success">
+      <a class="navbar-brand" href="{% url 'storeview:index' %}">Reclaim</a>
       <div class="navbar-nav d-flex flex-row">
         <a class="nav-link mx-3" href="{% url 'userview:index' %}">一覧</a>
       </div>
