--- a/reclaim/templates/accounts/edit_profile.html
+++ b/reclaim/templates/accounts/edit_profile.html
@@ -9,10 +9,6 @@
     <h1>Edit Profile</h1>
     <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
-      {% comment %} <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" value="{{ user.username }}" required />
-      </div> {% endcomment %}
       <div class="form-group">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" autocomplete="email" value="{{ user.email }}" required />
@@ -26,8 +22,8 @@
         <input type="text" id="last_name" name="last_name" autocomplete="family-name" value="{{ user.last_name }}" />
       </div>
       <div class="form-group">
-        <label for="profile_picture">Profile Picture:</label>
-        <input type="file" id="profile_picture" autocomplete="photo" name="profile_picture" />
+        <label for="birth_date">Birth Date:</label>
+        <input type="date" id="birth_date" name="birth_date" value="{{ user.birth_date|date:"Y/m/d" }}" />
       </div>
       <button type="submit">Save Changes</button>
     </form>
