--- a/reclaim/templates/accounts/login.html
+++ b/reclaim/templates/accounts/login.html
@@ -1,9 +1,10 @@
 {% extends 'accounts/base.html' %}
 
 {% block title %}
-  <div class="h1">Login</div>
+Login
 {% endblock %}
-{% block content %}
+{% block body %}
+  <div class="h2">Login</div>
   <form method="post">
     {% csrf_token %}
     {{ form.non_field_errors }}
