--- a/reclaim/templates/accounts/profile.html
+++ b/reclaim/templates/accounts/profile.html
@@ -22,7 +22,7 @@
       {% endif %}
       {% if user.birth_date %}
         <p>
-          <strong>生年月日:</strong> {{ user.birth_date }}
+          <strong>生年月日:</strong> {{ user.Fbirth_date }}
         </p>
       {% endif %}
 
