--- a/reclaim/templates/storeview/index.html
+++ b/reclaim/templates/storeview/index.html
@@ -2,12 +2,12 @@
 {% load static %}
 
 {% block title %}
-インデックスページ
-{% endblock title %}
+  インデックスページ
+{% endblock %}
 
 {% block body %}
-<h1>Index</h1>
-<p>Index test page</p>
-<a href="{% url 'storeview:list'  %}">list</a>
-<a href="{% url 'storeview:registerform'  %}">register</a>
-{% endblock body %}
+  <h1>Index</h1>
+  <p>Index test page</p>
+  <a href="{% url 'storeview:list' %}">list</a>
+  <a href="{% url 'storeview:registerform' %}">register</a>
+{% endblock %}
