--- a/reclaim/templates/accounts/edit_profile.html
+++ b/reclaim/templates/accounts/edit_profile.html
@@ -23,7 +23,7 @@
       </div>
       <div class="form-group">
         <label for="birth_date">Birth Date:</label>
-        <input type="date" id="birth_date" name="birth_date" value="{{ user.birth_date|date:"Y/m/d" }}" />
+        <input type="date" id="birth_date" name="birth_date" value="{{ user.birth_date|date:'Y-m-d' }}" />
       </div>
       <button type="submit">Save Changes</button>
     </form>
