--- a/reclaim/templates/accounts/logout.html
+++ b/reclaim/templates/accounts/logout.html
@@ -5,14 +5,12 @@
 {% endblock %}
 
 {% block content %}
-
-<li class="nav-item">
-  <form action="{% url 'accounts:logout' %}" method="post">
+  <li class="nav-item">
+    <form action="{% url 'accounts:logout' %}" method="post">
       {% csrf_token %}
       <a class="nav-link" href="#" onclick="this.closest('form').submit();return false;">ログアウト</a>
-  </form>
-</li>
-
+    </form>
+  </li>
 
   <form id="f_logout" action="{% url 'accounts:logout' %}" method="post">
     {% csrf_token %}
@@ -20,14 +18,12 @@
   </form>
 
   <p>次のページへ進まない場合は</p>
-  <a href="{% url 'accounts:login' %}">こちら</a>をクリックしてください
-
-  <script>
-    function logout() {
-      document.getElementById('f_logout').submit();
-      window.location.href = "{% url 'accounts:login' %}"
-    }
-
-    window.onload = logout
-  </script>
+  <a href="{% url 'accounts:login' %}">こちら</a>をクリックしてください<script>
+                                                           function logout() {
+                                                             document.getElementById('f_logout').submit()
+                                                             window.location.href = "{% url 'accounts:login' %}"
+                                                           }
+                                                           
+                                                           window.onload = logout
+                                                         </script>
 {% endblock %}
