--- a/reclaim/templates/items/item_list.html
+++ b/reclaim/templates/items/item_list.html
@@ -13,16 +13,12 @@
   {% endfor %}
 {% endblock %}
 
-{% comment %} 
-かさ増し用のコメント
-<!DOCTYPE html>
+{% comment %}かさ増し用のコメント<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body></body>
 </html> {% endcomment %}
