機能改善: パスワード変更機能を追加し、関連するテンプレートを作成しました。また、プロフィールページにパスワード変更リンクを追加し、HTML構造を整理しました。不要なファイルを.gitignoreに追加しました。

--- a/reclaim/templates/accounts/index.html
+++ b/reclaim/templates/accounts/index.html
@@ -9,19 +9,20 @@
 {% endblock %}
 
 {% block body %}
-  {% if user.is_authenticated %}
-    <div class="h2">Welcome {{ user.first_name }} {{ user.last_name }}</div>
-    <p>{{ user.email }}</p>
-    <a href="{% url 'accounts:profile' %}">profile</a>
-    <a href="{% url 'userview:index' %}">リストへ戻る</a>
-    <form action="{% url 'accounts:logout' %}" method="post" name="f_logout">
-      {% csrf_token %}
-      <input type="hidden" value="logout" />
-      <a href="javascript:f_logout.submit()" class="logout nav-link">Logout</a>
-    </form>
-  {% else %}
-    <h2>Welcome to Reclaim</h2>
-    <a href="{% url 'accounts:signup' %}" class="btn btn-primary">Signup</a>
-    <a href="{% url 'accounts:login' %}" class="btn btn-primary">Login</a>
-  {% endif %}
+  <div class="container mt-5">
+    {% if user.is_authenticated %}
+      <div class="h2 mb-3">Welcome {{ user.first_name }} {{ user.last_name }}</div>
+      <p class="mb-3">{{ user.email }}</p>
+      <a href="{% url 'accounts:profile' %}" class="btn btn-primary me-2">プロフィール</a>
+      <a href="{% url 'userview:index' %}" class="btn btn-secondary me-2">リストへ戻る</a>
+      <form action="{% url 'accounts:logout' %}" method="post" class="d-inline">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-danger">Logout</button>
+      </form>
+    {% else %}
+      <h2>Welcome to Reclaim</h2>
+      <a href="{% url 'accounts:signup' %}" class="btn btn-primary">Signup</a>
+      <a href="{% url 'accounts:login' %}" class="btn btn-primary">Login</a>
+    {% endif %}
+  </div>
 {% endblock %}
