--- a/reclaim/templates/accounts/edit_profile.html
+++ b/reclaim/templates/accounts/edit_profile.html
@@ -15,17 +15,17 @@
       </div>
       <div class="form-group">
         <label for="first_name">First Name:</label>
-        <input type="text" id="first_name" name="first_name" autocomplete="given-name" value="{{ user.first_name }}" />
+        <input type="text" class="form-control" id="first_name" name="first_name" autocomplete="given-name" value="{{ user.first_name }}" />
       </div>
       <div class="form-group">
         <label for="last_name">Last Name:</label>
-        <input type="text" id="last_name" name="last_name" autocomplete="family-name" value="{{ user.last_name }}" />
+        <input type="text" class="form-control" id="last_name" name="last_name" autocomplete="family-name" value="{{ user.last_name }}" />
       </div>
       <div class="form-group">
         <label for="birth_date">Birth Date:</label>
-        <input type="date" id="birth_date" name="birth_date" value="{{ user.birth_date|date:'Y-m-d' }}" />
+        <input type="date" class="form-control" id="birth_date" name="birth_date" value="{{ user.birth_date|date:'Y-m-d' }}" />
       </div>
-      <button type="submit">Save Changes</button>
+      <button type="submit" class="btn btn-primary">Save Changes</button>
     </form>
   </div>
 {% endblock %}
