機能改善: フォームテンプレートから不要なコメントを削除し、HTML構造を整理しました。

--- a/reclaim/templates/storeview/form.html
+++ b/reclaim/templates/storeview/form.html
@@ -43,7 +43,6 @@
 
     <div class="mb-3">
       <label for="id_item_date" class="form-label">発見日時:</label>
-      {% comment %}# TODO ピッカー対応させる{% endcomment %}
       {{ form.item_date.errors }}
       <input type="datetime-local" name="item_date" required="" id="id_item_date" class="form-control hasDatepicker" />
     </div>
@@ -66,11 +65,11 @@
       <input type="file" name="item_image" accept="image/*" id="id_item_image" class="form-control" />
     </div>
 
-    <div class="mb-3 form-check">
+    {% comment %} <div class="mb-3 form-check">
       <label for="id_item_status" class="form-check-label">発見されたか:</label>
       {{ form.item_status.errors }}
       <input type="checkbox" name="item_status" id="id_item_status" class="form-check-input" />
-    </div>
+    </div> {% endcomment %}
 
     <div class="mb-3">
       <label for="id_item_founder" class="form-label">発見者:</label>
