機能改善: ナビゲーションバーのスタイルを更新し、発見日時の入力フィールドに日付フォーマットを適用しました。また、説明欄を画像から生成するリンクを追加しました。

--- a/reclaim/templates/storeview/base.html
+++ b/reclaim/templates/storeview/base.html
@@ -21,7 +21,7 @@
     {% if user.is_authenticated %}
         {% if user.is_store or user.is_superuser %}
           <nav class="navbar navbar-dark sticky-top bg-success">
-            <a class="navbar-brand" href="{% url 'storeview:index' %}">Reclaim</a>
+            <a class="navbar-brand mx-3" href="{% url 'storeview:index' %}">Reclaim</a>
             <div class="navbar-nav d-flex flex-row">
               <a class="nav-link mx-3" href="{% url 'storeview:index' %}">一覧</a>
               <a class="nav-link mx-3" href="{% url 'storeview:registerform' %}">登録</a>
