機能追加: AI生成用のテンプレートを追加し、画像を使用した生成機能を実装しました。また、フォームのHTML構造を整理し、不要なファイルを削除しました。

--- a/reclaim/templates/storeview/form.html
+++ b/reclaim/templates/storeview/form.html
@@ -71,7 +71,7 @@
       <input type="checkbox" name="item_status" id="id_item_status" class="form-check-input" />
     </div> {% endcomment %}
 
-    <div class="mb-3">
+    <div class="mb-3" style="display: none;">
       <label for="id_item_founder" class="form-label">発見者:</label>
       {{ form.item_founder.errors }}
       <select name="item_founder" required="" id="id_item_founder" class="form-select">
