機能改善: テンプレートの継承を変更し、ナビゲーションバーのリンクを更新しました。また、アイテム詳細ページのフォームでのインスタンス参照を修正し、説明文の表示をコメントアウトしました。

--- a/reclaim/templates/storeview/overview.html
+++ b/reclaim/templates/storeview/overview.html
@@ -45,7 +45,7 @@
           {% endif %}
           <div class="card-body">
             <h4 class="card-title">{{ item.item_name }}</h4>
-            <h5 class="card-text">{{ item.item_description }}</h5>
+            {% comment %} <h5 class="card-text">{{ item.item_description }}</h5> #TODO {% endcomment %}
             <p class="card-text">{{ item.item_category_id }}</p>
             {% for i in item.item_tag_id.all %}
               {{ i }}
