機能改善: itemモデルにitem_keywordフィールドを追加し、不要なitem_keywordモデルを削除しました。また、contactビューのフォーム処理を整理しました。

--- a/reclaim/templates/storeview/upd-form.html
+++ b/reclaim/templates/storeview/upd-form.html
@@ -87,7 +87,7 @@
       </select>
     </div>
 
-    <button type="submit" class="btn btn-primary">登録</button>
+    <button type="submit" class="btn btn-primary">更新</button>
   </form>
 
   <a href="{% url 'storeview:index' %}" class="btn btn-primary mt-3 mx-3">戻る</a>
