--- a/reclaim/templates/userview/contact.html
+++ b/reclaim/templates/userview/contact.html
@@ -54,14 +54,14 @@
         {% csrf_token %}
         <div class="form-group">
           <label for="email">Your Email:</label>
-          <input type="email" id="email" name="email" required value="{{ user }}" />
+          <input type="email" id="email" name="email" required value="{{ user.email }}" />
           <a href="{% url 'accounts:profile' %}">異なる場合はこちらから変更してください</a>
           {% comment %}# TODO edit機能をつける{% endcomment %}
         </div>
         <div class="form-group">
           <label for="item">Item Name:</label>
           <p>{{ item_instance.item_name }}</p>
-          <input type="number" id="item_id" name="item_id" value="{{ contact.item_id }}" hidden />
+          <input type="hidden" id="item_id" name="item_id" value="{{ item_instance.pk }}" />
         </div>
         <div class="form-group">
           <label for="message">Message:</label>
