--- a/reclaim/templates/storeview/overview.html
+++ b/reclaim/templates/storeview/overview.html
@@ -16,27 +16,24 @@
     <script src="{% static 'js/scroll.js' %}" defer></script>
   </head>
   <body>
+    {{ if user.is_authenticated }}
     <nav class="navbar navbar-dark sticky-top bg-success">
       <a class="navbar-brand" href="{% url 'storeview:index' %}">Reclaim</a>
       <div class="navbar-nav d-flex flex-row">
         <h2 class="navbar-text text-white">今見つかっている落とし物一覧</h2>
       </div>
       <div class="navbar-nav d-flex flex-row">
-      <form action="{% url 'accounts:logout' %}" method="post">
-        {% csrf_token %}
-        <a class="nav-link" href="#" onclick="this.closest('form').submit();return false;">ログアウト</a>
-      </form>
+
       </div>
     </nav>
     <div class="list slider">
       {% for item in object_list %}
-        <div class="card p-4 m-4 bg-light border border-success rounded" style="">
+        <div class="card p-4 m-4 bg-light border border-success rounded">
           {% if item.item_image %}
             <img src="{{ MEDIA_URL }}{{ item.item_image }}" class="card-img-top" alt="..." />
           {% endif %}
           <div class="card-body">
             <h4 class="card-title">{{ item.item_name }}</h4>
-            {% comment %} <h5 class="card-text">{{ item.item_description }}</h5> #TODO {% endcomment %}
             <p class="card-text">{{ item.item_category_id }}</p>
             {% for i in item.item_tag_id.all %}
               {{ i }}
@@ -47,5 +44,7 @@
         </div>
       {% endfor %}
     </div>
+    {% else %}
+    
   </body>
 </html>
