機能追加: 検索ページを実装。ナビゲーションバーに検索リンクを追加。

--- a/reclaim/templates/userview/base.html
+++ b/reclaim/templates/userview/base.html
@@ -23,6 +23,10 @@
       <div class="navbar-nav d-flex flex-row">
         <a class="nav-link mx-3" href="{% url 'userview:index' %}">一覧</a>
       </div>
+      <div class="navbar-nav d-flex flex-row">
+        <a class="nav-link mx-3" href="{% url 'userview:search_page' %}">検索</a>
+        {% comment %} #TODO {% endcomment %}
+      </div>
       {% if user.is_authenticated %}
         <div class="navbar-nav d-flex flex-row">
           <li class="nav-item">
