--- a/reclaim/templates/userview/item_detail.html
+++ b/reclaim/templates/userview/item_detail.html
@@ -15,6 +15,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ item.item_name }}</h5>
           <p class="card-text">{{ item.item_description }}</p>
+          <p class="card-text">{{ item.item_keyword }}</p>
           <p class="card-text">{{ item.item_category_id }}</p>
           <p class="card-text">{{ item.item_tag_id }}</p>
           <p class="card-text">{{ item.item_lost_location }}</p>
