--- a/reclaim/templates/storeview/base.html
+++ b/reclaim/templates/storeview/base.html
@@ -25,6 +25,7 @@
             <div class="navbar-nav d-flex flex-row">
               <a class="nav-link mx-3" href="{% url 'storeview:index' %}">一覧</a>
               <a class="nav-link mx-3" href="{% url 'storeview:registerform' %}">登録</a>
+              <a class="nav-link mx-3" href="{% url 'storeview:search_page' %}">検索</a>
             </div>
           <div class="navbar-nav d-flex flex-row">
             <form action="{% url 'accounts:logout' %}" method="post">
