機能改善: AiGenerate関数にキーワード生成ロジックを追加し、画像がない場合の処理を強化しました。また、HTMLテンプレートに画像プレビューを追加し、リスト表示のスタイルを調整しました。

--- a/reclaim/templates/storeview/AiGenerate.html
+++ b/reclaim/templates/storeview/AiGenerate.html
@@ -81,6 +81,7 @@
       <input type="file" name="item_image" accept="image/*" id="id_item_image" class="form-control" />
     </div>
 
+    <img src="{{ MEDIA_URL }}{{ item_instance.item_image }}" class="preview-img" alt="..." style="max-width: 30%;max-height: 30%;"/>
 
 
     <div class="mb-3">
