--- a/reclaim/templates/storeview/list.html
+++ b/reclaim/templates/storeview/list.html
@@ -9,7 +9,7 @@
     .list {
       display: flex;
       flex-wrap: wrap;
-      {% comment %} justify-content: center; {% endcomment %}
+      justify-content: center;
     }
   </style>
   <div class="list">
