--- a/reclaim/templates/storeview/base.html
+++ b/reclaim/templates/storeview/base.html
@@ -30,7 +30,7 @@
           <div class="navbar-nav d-flex flex-row">
             <form action="{% url 'accounts:logout' %}" method="post">
               {% csrf_token %}
-              <a class="nav-link" href="#" onclick="this.closest('form').submit();return false;">ログアウト</a>
+              <a class="nav-link mx-3" href="#" onclick="this.closest('form').submit();return false;">ログアウト</a>
             </form>
           </nav>
         {% else %}
